# reference

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  conanfile.py
doc/maxminddb/: geoip-update.md
src/: CMakeLists.txt
src/gstd/check/: filter.cpp  filter.h  numeric.cpp  numeric.h  version.cpp  version.h
src/gstd/client/common/: error_code.h
src/gstd/client/http/: http-client.cpp  http-client.h
src/gstd/client/redis/: README.md  redis_client.cpp  redis_client.h
src/gstd/container/: advancedqueue.cpp  advancedqueue.h  base_advancedqueue.h  blocking_advancedqueue.h  dictionary.cpp  dictionary.h  ladvancedqueue.h
src/gstd/net/: CSmtp.cpp  CSmtp.h  hostaddr.cpp  hostaddr.h  ip.cpp  ip.h  ipchecker.cpp  ipchecker.h  mock_ipchecker.h
src/gstd/type/: jvariant.cpp  jvariant.h
src/gstd/util/: base64.cpp  base64.h  cmdexecute.cpp  cmdexecute.h  cycle_checker.h  datetime.cpp  datetime.h  filetool.cpp  filetool.h  initscript.cpp  initscript.h  logger.cpp  logger.h  mail_sender.cpp  mail_sender.h  string_generator.cpp  string_generator.h  strtool.cpp  strtool.h  timer.cpp  timer.h
src/gstd/windows/: README.md  common_linux.cpp  common_linux.h  directory_control.cpp  directory_control.h  locker.cpp  locker.h  msgbox.cpp  msgbox.h  registry.cpp  registry.h  service.cpp  service.h  service_contorl.cpp  service_control.h  strutil.cpp  strutil.h  thread.cpp  thread.h
test/: CMakeLists.txt  main.cpp
test/advancedqueue/: test_advancedqueue.cpp
test/build_win32/: README.md
test/build_win32/VC15/: gtest-reference.sln
test/build_win32/VC15/gtest-reference/: gtest-reference.vcxproj  gtest-reference.vcxproj.filters
test/check/: test_check.cpp
test/dictionary/: dictionary-test.cpp
test/http_client/: test_http_client.cpp
test/ipchecker/: test_ipchecker.cpp
test/logger/: logger-test.cpp
test/net/: test_hostaddr.cpp  test_ip.cpp
test/numeric/: test_numeric.cpp
test/redis_client/: test_redis_client.cpp
test/strtool/: strtool-test.cpp
test/util/: test_cycle_checker.cpp  test_datetime.cpp
test/version/: test_version.cpp
test/windows/: README.md  test_directory_control.cpp  test_strutil.cpp
